--- a/build.gradle
+++ b/build.gradle
@@ -204,8 +204,8 @@ subprojects {
         // This disables the builds tools automatic vector -> PNG generation
         defaultConfig.generatedDensities = []
 
-        compileOptions.sourceCompatibility JavaVersion.VERSION_1_8
-        compileOptions.targetCompatibility JavaVersion.VERSION_1_8
+        compileOptions.sourceCompatibility JavaVersion.VERSION_11
+        compileOptions.targetCompatibility JavaVersion.VERSION_11
 
         aaptOptions.additionalParameters "--no-version-vectors"
 
